フォルダ構成の変更

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,7 @@
     <link href="/css/style.css" rel="stylesheet">
   </head>
   <body>
-    <div id="header">
-    </div>
+    <div id="header"></div>
     <div id="navigation"></div>
     <div id="content">
       <h1>helloWorld!</h1>
